# monkeyboard

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  STATUS.md  TESTING_STATUS.md
.cache/clangd/index/: commons.h.537B26F7921DF24C.idx  key_buffer.c.A94B7C5B668EF428.idx  key_buffer.h.D2E2DB349EBD843A.idx  keymap_initializer.c.EB54D52C2C46A45D.idx  keymap_initializer.h.37018394B14BCDCD.idx  pipeline_executor.c.995D5DF865D41C22.idx  pipeline_executor.h.E121F6426C67AE86.idx  pipeline_key_replacer.c.D7FEEEE3E8CEA622.idx  pipeline_key_replacer.h.0BFCAE57DBF5F168.idx  pipeline_key_replacer_initializer.c.928D4A20480B4304.idx  pipeline_key_replacer_initializer.h.0FC48F8D2AF3865C.idx  pipeline_oneshot_modifier.c.CAFAB2B4871E3577.idx  pipeline_oneshot_modifier.h.10DD5480D0026396.idx  pipeline_oneshot_modifier_initializer.c.98BFA0EA6BF6173B.idx  pipeline_oneshot_modifier_initializer.h.49D29B6161A4EED6.idx  pipeline_tap_dance.c.EF4A3A5E7060B7F8.idx  pipeline_tap_dance.h.13AE83BEFB751AA6.idx  pipeline_tap_dance_initializer.c.AF095A703C0D8AE8.idx  pipeline_tap_dance_initializer.h.5467EE766F4BB785.idx  platform_interface.h.7162BE332AF5CE6E.idx  qmk_test_mock.h.E2E817589C7490E7.idx  test_keycodes.h.5EED6282998AD54C.idx
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
docs/: Hold-Tap.md  Monkeeb.md  combo_documentation.md  doc-prompt.md  multi-tap.md
examples/: CMakeLists.txt
examples/qmk/: CMakeLists.txt
src/: key_buffer.c  key_buffer.h  key_event_buffer.c  key_event_buffer.h  key_press_buffer.c  key_press_buffer.h  key_virtual_buffer.c  key_virtual_buffer.h  keycodes.h  keymap_initializer.c  keymap_initializer.h  monkeyboard_debug.h  monkeyboard_deferred_callbacks.c  monkeyboard_deferred_callbacks.h  monkeyboard_keycodes.c  monkeyboard_keycodes.h  monkeyboard_layer_manager.c  monkeyboard_layer_manager.h  monkeyboard_platform_detection.h  monkeyboard_time_manager.c  monkeyboard_time_manager.h  pipeline_combo.c  pipeline_combo.h  pipeline_combo_initializer.c  pipeline_combo_initializer.h  pipeline_executor.c  pipeline_executor.h  pipeline_key_replacer.c  pipeline_key_replacer.h  pipeline_key_replacer_initializer.c  pipeline_key_replacer_initializer.h  pipeline_oneshot_modifier.c  pipeline_oneshot_modifier.h  pipeline_oneshot_modifier_initializer.c  pipeline_oneshot_modifier_initializer.h  pipeline_tap_dance.c  pipeline_tap_dance.h  pipeline_tap_dance_initializer.c  pipeline_tap_dance_initializer.h  platform_interface.h  (+5 more)
test_specifications/: test_group_1.md  test_group_10.md  test_group_2.md  test_group_3.md  test_group_4.md  test_group_5.md  test_group_6.md  test_group_7.md  test_group_8.md  test_group_9.md
tests/: combo_test_helpers.hpp  common_functions.cpp  common_functions.hpp  commons.h  event_buffer_test_helpers.hpp  key_replacer_test_helpers.hpp  keyboard_simulator.cpp  keyboard_simulator.hpp  keycodes.h  oneshot_test_helpers.hpp  platform_mock.cpp  platform_mock.h  platform_mock.hpp  tap_dance_test_framework.hpp  tap_dance_test_helpers.hpp  test_combined_pipelines.cpp  test_combo.cpp  test_combo_basic.cpp  test_debug_simple.cpp  test_event_buffer_management.cpp  test_get_key_id.cpp  test_group_10_edge_cases.cpp  test_group_11_interrupt_flavors.cpp  test_group_1_basic_state_machine.cpp  test_group_2_hold_strategy.cpp  test_group_3_multi_tap.cpp  test_group_4_action_overflow.cpp  test_group_5_immediate_delayed_execution.cpp  test_group_6_timing_boundary_conditions.cpp  test_group_7_complex_interruption_scenarios.cpp  test_group_8_action_execution_verification.cpp  test_group_9_configuration_combinations.cpp  test_group_key_replacer.cpp  test_group_oneshot.cpp  test_key_replacer.cpp  test_keycodes.h  test_no_pipelines.cpp  test_oneshot.cpp  test_scenario.hpp  test_tap_dance_TAB_BALANCE.cpp  (+15 more)
